2013-01-29 Dominik Reichardt <dominus@users.sourceforge.net>	
	* configure.ac, audio/midi_drivers/CoreAudioMidiDriver.*: switched to AUGraph, 
	synchronized with ScummVM's CoreAudio MIDI driver. Added two frameworks 
	needed for that.
	  
2013-01-28 Dominik Reichardt <dominus@users.sourceforge.net>	
	* audio/midi_drivers/CoreAudioMidiDriver.*: ripped out code that went into 
	  the CoreMidiDriver a long time ago.
	  
2013-01-27	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.*: charmed_more_difficult was updated for new charmed alignment.
	  charmed_more_difficult will now only put charmed party members into combat
	  when not in combat mode.

2013-01-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Clearing frame_time when avatar and NPCs aren't performing an
	  action (since actions force a delay at the end to prevent skipping steps).
	  When clearing casting frames, add them as dirty before changing mode so
	  they will be cleared from the screen.
	* effects.cc: Fixed Death Vortex and Energy Mist. Fixed missile drops.
	* exult.cc: SetIcon is unused on MacOSX. Deprecated literal conversion to
	  char * in Windows and Mac OSX. Variable last_fps is debug-only.
	* conf/Configuration.cc: Spacing.
	* files/zip/*.c, audio/midi_drivers/FMOplMidiDriver.cpp: Clang noise.
	* imagewin/manip.h: Uninitialized variable being assigned to itself.
	* imagewin/scale_xbr.h: Fixed forward declaration.
	* tools/wuc.c: Missing initializers.
	* usecode/ucdisasm.cc: 32-bits is 8 hex digits.
	* usecode/ucinternal.cc: Usecode_Trace and Usecode_TraceReturn are used only
	  in debug.
	* usecode/ucxt/*/*: Portability: typeof is GNU extension.
	Rev 7341
	* Makefile.common: Duplicate "-o $(@)" in libsmooth_stream.
	* gamewin.cc: Added some sanity checking to shut up spuriours warnings from
	  compiler in ireg object loading.
	* objs/egg.cc: Eliminating useless code.
	* shapes/pngio.cc: Eliminating clobbering warning.